# ubbrl

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: build_and_test.yml
include/: history.h  ubbrl.h  vec.h
lib/: meson.build
src/: charstream.c  charstream.h  history.c  main.c  ubbrl.c  vec.c  wordvec.c  wordvec.h
tests/: test-ubbrl.c
